Add complete index html

--- a/WebVisualisations/index.html
+++ b/WebVisualisations/index.html
@@ -28,7 +28,7 @@
     <!-- (RHS) Link to "Data" page -->
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
+         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Plots
@@ -54,11 +54,45 @@
     <!-- Project description -->
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-
-
-
-    <!-- Sidebar with clickable preview images -->
+                <div class="col-sm-12 col-lg-8">
+                  <!-- First column -->
+                  <div class="box">
+                    <h1> Summary: Latitute vs. X</h1>
+                    <hr>
+                    <img src="assets/Fig1.png" class="thumbnail float-left" alt="Max temperature plot">
+                    <p>
+                      Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                    </p>
+                    <p>  
+                      Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-sm-12 col-lg-4">
+                  <!-- Second column -->
+                  <div class="box">
+                    <h2> Visualisations</h2>
+                    <hr>
+                    <div class="container" id="gallery-box">
+                      <div class="row">
+                        <div class="col-sm-3 col-lg-6">
+                          <a href="#"><img src="assets/Fig1.png" class="gallery" alt="Max temperature"></a>
+                         </div>
+                        <div class="col-sm-3 col-lg-6">
+                          <a href="#"><img src="assets/Fig2.png" class="gallery" alt="Max temperature"></a>
+                        </div>
+                        <div class="col-sm-3 col-lg-6">
+                          <a href="#"><img src="assets/Fig3.png" class="gallery" alt="Max temperature"></a>
+                        </div>
+                        <div class="col-sm-3 col-lg-6">
+                          <a href="#"><img src="assets/Fig4.png" class="gallery" alt="Max temperature"></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
 
 <!-- Boostrap js -->
 
