--- a/WebVisualisations/temp.html
+++ b/WebVisualisations/temp.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Latitude</title>
+  <title>Maximum Temperature</title>
 
  <!-- Link to Bootstrap and css -->
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -49,50 +49,47 @@
          </ul>
     </nav>
 
-    <!-- Page content (responsive; invert colours) -->
-
-    <!-- Project description -->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-8">
-                  <!-- First column -->
-                  <div class="box">
-                    <h1> Summary: Latitute vs. X</h1>
-                    <hr>
-                    <img src="assets/Fig1.png" class="thumbnail float-left" alt="Max temperature plot">
-                    <p>
-                      Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
-                    </p>
-                    <p>  
-                      Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-12 col-lg-4">
-                  <!-- Second column -->
-                  <div class="box">
-                    <h2> Visualisations</h2>
-                    <hr>
-                    <div class="container" id="gallery-box">
-                      <div class="row">
-                        <div class="col-sm-3 col-lg-6">
-                          <a href="temp.html"><img src="assets/Fig1.png" class="gallery" alt="Max temperature"></a>
-                         </div>
-                        <div class="col-sm-3 col-lg-6">
-                          <a href="humidity.html"><img src="assets/Fig2.png" class="gallery" alt="Humidity"></a>
-                        </div>
-                        <div class="col-sm-3 col-lg-6">
-                          <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" alt="Cloudiness"></a>
-                        </div>
-                        <div class="col-sm-3 col-lg-6">
-                          <a href="wind.html"><img src="assets/Fig4.png" class="gallery" alt="Wind speed"></a>
-                        </div>
-                      </div>
+    <!-- Page content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-8">
+              <!-- Main visualisation -->
+              <div class="box">
+                <h1> Max Temperature</h1>
+                <hr>
+                <img src="assets/Fig1.png" class="visualisation" alt="Max temperature plot">
+                <p>
+                  Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-12 col-lg-4">
+              <!-- Visualisation gallery -->
+              <div class="box">
+                <h2> Visualisations</h2>
+                <hr>
+                <div class="container" id="gallery-box">
+                  <div class="row">
+                    <div class="col-sm-4 col-lg-6">
+                      <a href="temp.html"><img src="assets/Fig1.png" class="gallery" id=active-image alt="Max temperature"></a>
+                     </div>
+                    <div class="col-sm-4 col-lg-6">
+                      <a href="humidity.html"><img src="assets/Fig2.png" class="gallery" alt="Humidity"></a>
+                    </div>
+                  <div class="row">
+                    <div class="col-sm-4 col-lg-6">
+                      <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" alt="Cloudiness"></a>
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                      <a href="wind.html"><img src="assets/Fig4.png" class="gallery" alt="Wind speed"></a>
                     </div>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
+      </div>
+
 
 <!-- Boostrap js -->
 
