Update visualisation page

--- a/WebVisualisations/index.html
+++ b/WebVisualisations/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<!-- Navigation menu (responsive; invert colours) -->
+<!-- Navigation menu -->
 
     <!-- (LHS) Name of the site with link to return to landing page -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,7 +49,7 @@
          </ul>
     </nav>
 
-    <!-- Page content (responsive; invert colours) -->
+    <!-- Page content -->
 
     <!-- Project description -->
         <div class="container">
