--- a/WebVisualisations/temp.html
+++ b/WebVisualisations/temp.html
@@ -71,19 +71,17 @@
                 <div class="container" id="gallery-box">
                   <div class="row">
                     <div class="col-sm-4 col-lg-6">
-                      <a href="temp.html"><img src="assets/Fig1.png" class="gallery" id=active-image alt="Max temperature"></a>
+                      <a href="temp.html"><img src="assets/Fig1.png" class="gallery" id="active-image" alt="Max temperature"></a>
                      </div>
                     <div class="col-sm-4 col-lg-6">
                       <a href="humidity.html"><img src="assets/Fig2.png" class="gallery" alt="Humidity"></a>
                     </div>
-                  <div class="row">
                     <div class="col-sm-4 col-lg-6">
                       <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" alt="Cloudiness"></a>
                     </div>
-                    <div class="col-sm-12 col-lg-6">
+                    <div class="offset-sm-4 col-sm-4 col-lg-6">
                       <a href="wind.html"><img src="assets/Fig4.png" class="gallery" alt="Wind speed"></a>
                     </div>
-                  </div>
                 </div>
               </div>
             </div>
