Update comparison and data pages

--- a/WebVisualisations/comparison.html
+++ b/WebVisualisations/comparison.html
@@ -51,38 +51,40 @@
 
     <!-- Page content -->
 
-    <!-- Text -->
-    <div class="box">
-        <h1> Comparison: Latitute vs. X</h1>
-        <p>
-          Click on any plot to get an in-depth analysis.<br>
-          <br>
-          <br>
-        </p>
 
     <!-- Images -->
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <h3> vs. Max Temperature</h3>
-                    <a href="temp.html"><img src="assets/Fig1.png" class="gallery" alt="Max temperature"></a>
-                   </div>
-                  <div class="col-sm-12 col-md-6">
-                    <h3> vs. Humidity</h3>
-                    <a href="humidity.html"><img src="assets/Fig2.png" class="gallery" alt="Humidity"></a>
-                  </div>
-                  <div class="col-sm-12 col-md-6">
-                    <br>
-                    <h3> vs. Cloudiness </h3>
-                    <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" alt="Cloudiness"></a>
-                  </div>
-                  <div class="col-sm-12 col-md-6">
-                    <br>
-                    <h3> Wind Speed</h3>
-                    <a href="wind.html"><img src="assets/Fig4.png" class="gallery" alt="Wind speed"></a>
-                  </div>
-                </div>
-              </div>
+          <div class="row box">
+    <!-- Text -->
+           <div class="col-12">
+            <h1> Comparison: Latitute vs. X</h1>
+            <p>
+            Click on any plot to get an in-depth analysis.<br>
+            <br>
+            <br>
+            </p>
+           </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <h3> vs. Max Temperature</h3>
+              <a href="temp.html"><img src="assets/Fig1.png" class="gallery" alt="Max temperature"></a>
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <h3> vs. Humidity</h3>
+              <a href="humidity.html"><img src="assets/Fig2.png" class="gallery" alt="Humidity"></a>
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <br>
+              <h3> vs. Cloudiness </h3>
+              <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" alt="Cloudiness"></a>
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <br>
+              <h3> Wind Speed</h3>
+              <a href="wind.html"><img src="assets/Fig4.png" class="gallery" alt="Wind speed"></a>
+            </div>
+          </div>
+        </div>
 
 <!-- Boostrap js -->
 
