--- a/WebVisualisations/data.html
+++ b/WebVisualisations/data.html
@@ -50,13 +50,16 @@
     </nav>
 
     <!-- Page content -->
-
-    <div class="box">
+    <div class="container">
+      <div class="row box">
+       <div class="col-12">
         <h1> Data </h1>
         <p>
           The following table includes all of the data used for plotting during this project.<br>
         <br>
+        <br>
         </p>
+       </div> 
     <div class="table-responsive-sm">
         <table class="table">
         <thead>
