Additional visualisation pages

--- a/WebVisualisations/cloudiness.html
+++ b/WebVisualisations/cloudiness.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Maximum Temperature</title>
+  <title>Cloudiness</title>
 
  <!-- Link to Bootstrap and css -->
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -55,9 +55,9 @@
             <div class="col-sm-12 col-lg-8">
               <!-- Main visualisation -->
               <div class="box">
-                <h1> Max Temperature</h1>
+                <h1> Cloudiness </h1>
                 <hr>
-                <img src="assets/Fig1.png" class="visualisation" alt="Max temperature plot">
+                <img src="assets/Fig3.png" class="visualisation" alt="Cloudiness">
                 <p>
                   Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
                 </p>
@@ -71,13 +71,13 @@
                 <div class="container" id="gallery-box">
                   <div class="row">
                     <div class="col-sm-4 col-lg-6">
-                      <a href="temp.html"><img src="assets/Fig1.png" class="gallery" id="active-image" alt="Max temperature"></a>
+                      <a href="temp.html"><img src="assets/Fig1.png" class="gallery" alt="Max temperature"></a>
                      </div>
                     <div class="col-sm-4 col-lg-6">
                       <a href="humidity.html"><img src="assets/Fig2.png" class="gallery" alt="Humidity"></a>
                     </div>
                     <div class="col-sm-4 col-lg-6">
-                      <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" alt="Cloudiness"></a>
+                      <a href="cloudiness.html"><img src="assets/Fig3.png" class="gallery" id="active-image" alt="Cloudiness"></a>
                     </div>
                     <div class="offset-sm-4 offset-lg-0 col-sm-4 col-lg-6">
                       <a href="wind.html"><img src="assets/Fig4.png" class="gallery" alt="Wind speed"></a>
