Final html and analysis

--- a/WebVisualisations/cloudiness.html
+++ b/WebVisualisations/cloudiness.html
@@ -59,7 +59,7 @@
                 <hr>
                 <img src="assets/Fig3.png" class="visualisation" alt="Cloudiness">
                 <p>
-                  Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                  As with humidity, there is no distinct relationship between cloudiness and latitude based on the scatter plot.<br>
                 </p>
               </div>
             </div>
