--- a/WebVisualisations/index.html
+++ b/WebVisualisations/index.html
@@ -7,8 +7,7 @@
   <title>Latitude</title>
 
  <!-- Link to Bootstrap and css -->
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
  <link rel="stylesheet" href="style.css">
 </head>
 
@@ -61,10 +60,10 @@
                     <hr>
                     <img src="assets/Fig1.png" class="thumbnail float-left" alt="Max temperature plot">
                     <p>
-                      Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                      The purpose of this project was to analyse weather conditions in relation to distance from the equator i.e. latitude. Data from the OpenWeatherMap API has been compiled to create a dataset representing over 500 cities. <br>
                     </p>
                     <p>  
-                      Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.
+                      As part of the analysis, Matplotlib was used to plot temparature, humidity, cloudniness and windspeed versus latitude. The source data and visualisations are published on this website, including explanations and descriptions of trends and correlations evident in the data.
                     </p>
                   </div>
                 </div>
