--- a/WebVisualisations/humidity.html
+++ b/WebVisualisations/humidity.html
@@ -59,7 +59,7 @@
                 <hr>
                 <img src="assets/Fig2.png" class="visualisation" alt="Humidity">
                 <p>
-                  Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                  There is no distinct relationship between humidity and latitude based on the scatter plot. High and low levels of humidity are experienced in cities both close and far from the equator, and the data does not present any strong correlation between latitude and humidity. <br>
                 </p>
               </div>
             </div>
