--- a/WebVisualisations/temp.html
+++ b/WebVisualisations/temp.html
@@ -59,7 +59,7 @@
                 <hr>
                 <img src="assets/Fig1.png" class="visualisation" alt="Max temperature plot">
                 <p>
-                  Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                  As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.<br>
                 </p>
               </div>
             </div>
