--- a/WebVisualisations/wind.html
+++ b/WebVisualisations/wind.html
@@ -59,7 +59,7 @@
                 <hr>
                 <img src="assets/Fig4.png" class="visualisation" alt="Wind Speed">
                 <p>
-                  Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.<br>
+                  The scatter plor suggests a sligth positive correlation between wind speed and latitude, with higher wind speeds recorded at positive latitudes i.e. north of the equator. <br>
                 </p>
               </div>
             </div>
